(env
 (release
  (ocamlopt_flags
   (:standard -w -9 -alert --deprecated -O2)))
 (_
  (flags
   (:standard -w -9 -alert --deprecated))))

(include_subdirs unqualified)

(copy_files ../config/liquidsoap_paths.*.ml)

(rule
 (target liquidsoap_paths.ml)
 (action
  (copy liquidsoap_paths.%{env:LIQUIDSOAP_BUILD_TARGET=default}.ml %{target})))

(library
 (name liquidsoap_core)
 (preprocess
  (pps ppx_string))
 (libraries
  mm
  cron
  dtools
  dune-build-info
  duppy
  fileutils
  liquidsoap-lang
  liquidsoap-lang.console
  liquidsoap-lang.stdlib
  menhirLib
  camomile.lib
  curl
  cry
  re
  uri
  metadata
  mem_usage
  magic-mime
  (select
   file_watcher.ml
   from
   (inotify -> file_watcher.inotify.ml)
   (-> file_watcher.mtime.ml)))
 (foreign_stubs
  (language c)
  (names unix_c defer_c content_pcm_c lufs_c))
 (wrapped false)
 (library_flags -linkall)
 (modules
  aFrame
  accelerate
  add
  amplify
  annotate
  audio_converter
  audio_gen
  available
  avi
  avi_encoder
  avi_format
  biquad_filter
  blank
  charset_base
  charset
  child_support
  chord
  clip
  clock
  clock_base
  comb
  compand
  compress
  compress_exp
  concurrent_hashtbl
  content
  content_audio
  content_pcm_base
  content_pcm_f32
  content_pcm_s16
  content_base
  content_midi
  content_timed
  content_video
  conversion
  configure
  cross
  debug_sources
  decoder
  decoder_utils
  defer
  delay
  delay_line
  doc
  dtmf
  dyn_op
  echo
  encoder
  encoder_formats
  encoder_utils
  error
  external_encoder
  external_encoder_format
  external_input
  external_input_audio
  external_input_video
  extralib
  extra_args
  fdkaac_format
  ffmpeg_format
  file_watcher
  filter
  filter_rc
  fir_filter
  flac_format
  flac_metadata_plug
  flanger
  frame
  frame_base
  frame_settings
  frame_type
  format_type
  gate
  generated
  generator
  harbor
  harbor_base
  harbor_input
  harbor_output
  hooks_implementations
  hls_output
  icecast_utils
  icecast2
  id3_plug
  iir_filter
  image_decoder
  image_plug
  json
  keyboard
  lang
  lang_avi
  lang_clock
  lang_encoder
  lang_external_encoder
  lang_fdkaac
  lang_flac
  lang_mp3
  lang_ndi
  lang_ogg
  lang_opus
  lang_source
  lang_shine
  lang_speex
  lang_string
  lang_theora
  lang_vorbis
  lang_wav
  liqcurl
  lifecycle
  liq_http
  liq_time
  liquidsoap_paths
  log
  lufs
  mFrame
  map_metadata
  map_op
  max_duration
  mean
  merge_metadata
  metadata_base
  midi_decoder
  midi_routing
  midimeter
  modules
  mp3_format
  mpd
  ms_stereo
  muxer
  mutex_utils
  native_audio_converter
  native_video_converter
  ndi_format
  ndi_encoder
  noblank
  noise
  normalize
  ogg_format
  ogg_metadata_plug
  on_frame
  opus_format
  output
  pan
  pipe
  pipe_output
  pitch
  playlist_parser
  plug
  pool
  pos
  ppm_decoder
  process_handler
  producer_consumer
  queues
  raw_audio_decoder
  replay_metadata
  replaygain_op
  request
  request_dynamic
  resample
  rms_smooth
  runtime_error
  sandbox
  sequence
  server
  server_builtins
  sha1
  shebang
  shine_format
  source
  speex_format
  srt_decoder
  srt_parser
  start_stop
  startup
  stereo
  still_frame
  stringView
  strings
  swap
  switch
  synth_op
  synthesized
  term
  theora_format
  time_warp
  track
  source_tracks
  track_map
  tutils
  type
  typing
  unifier
  udp_io
  utils
  value
  vFrame
  video_board
  video_converter
  video_effects
  video_fade
  video_plug
  video_testsrc
  video_text
  video_text_native
  video_volume
  vorbis_format
  wav_aiff
  wav_aiff_decoder
  wav_encoder
  wav_format
  websocket
  window_op))
