(env
 (release
  (ocamlopt_flags
   (:standard -w -9 -alert --deprecated -O2)))
 (_
  (flags
   (:standard -w -9 -alert --deprecated))))

(include_subdirs unqualified)

(copy_files ../config/liquidsoap_paths.*.ml)

(rule
 (target liquidsoap_paths.ml)
 (action
  (copy liquidsoap_paths.%{env:LIQUIDSOAP_BUILD_TARGET=default}.ml %{target})))

(library
 (name liquidsoap_core)
 (preprocess
  (pps ppx_string))
 (libraries
  mm
  cron
  dtools
  dune-build-info
  duppy
  fileutils
  liquidsoap-lang
  liquidsoap-lang.console
  liquidsoap-lang.stdlib
  menhirLib
  camomile.lib
  curl
  cry
  re
  uri
  metadata
  mem_usage
  magic-mime
  (select
   file_watcher.ml
   from
   (inotify -> file_watcher.inotify.ml)
   (-> file_watcher.mtime.ml)))
 (foreign_stubs
  (language c)
  (names unix_c defer_c content_pcm_c lufs_c))
 (wrapped false)
 (library_flags -linkall))
