(env
 (dev
  (flags
   (:standard -w -7-9 -warn-error -33))))

(include_subdirs unqualified)

(menhir
 (modules parser json_parser))

(rule
 (target build_config.ml)
 (action
  (with-stdout-to
   %{target}
   (echo
    "let version = \"%{version:liquidsoap-lang}\"\n\n           let ext_exe = \"%{ocaml-config:ext_exe}\"\n\n           let architecture = \"%{ocaml-config:architecture}\"\n\n           let host = \"%{ocaml-config:host}\"\n\n           let target = \"%{ocaml-config:target}\"\n\n           let system = \"%{ocaml-config:system}\"\n\n           let ocamlopt_cflags = \"%{ocaml-config:ocamlopt_cflags}\"\n\n           let native_c_compiler = \"%{ocaml-config:native_c_compiler}\"\n\n           let native_c_libraries = \"%{ocaml-config:native_c_libraries}\""))))

(library
 (name liquidsoap_lang)
 (public_name liquidsoap-lang)
 (library_flags -linkall)
 (preprocess
  (pps sedlex.ppx))
 (libraries str unix menhirLib)
 (modules
  build_config
  builtins_bool
  builtins_eval
  builtins_files
  builtins_getter
  builtins_json
  builtins_lang
  builtins_list
  builtins_math
  builtins_null
  builtins_profiler
  builtins_regexp
  builtins_string
  builtins_ref
  console
  content
  doc
  documentation
  environment
  error
  evaluation
  frame
  hooks
  json_base
  json_lexer
  json_parser
  json
  lang
  lang_core
  lang_error
  lang_string
  lexer
  modules
  parser
  parser_helper
  plug
  pos
  preprocessor
  profiler
  repr
  regexp
  runtime
  runtime_error
  term
  type
  typechecking
  typing
  unifier
  value))
