(rule
  (alias update_cue_file)
  (target autocue.cue_file.liq.new)
  (action
    (run wget https://raw.githubusercontent.com/savonet/autocue.cue_file/refs/heads/main/autocue.cue_file.liq -O %{target})))

(rule
 (alias update_cue_file)
 (action
  (diff autocue.cue_file.liq autocue.cue_file.liq.new)))

(install
 (section
  (site
   (liquidsoap-lang libs)))
 (package liquidsoap-libs)
 (files
  (glob_files *.liq)))

(install
 (section
  (site
   (liquidsoap-lang libs)))
 (package liquidsoap-libs-extra)
 (files
  (glob_files extra/*.liq)))
